# calqui_ros_padawan

./: Dockerfile  calqui_map.pgm  calqui_map.yaml  setup_ws.sh  start_ws.sh
calqui/: CMakeLists.txt  package.xml
calqui/launch/: calqui.launch
calqui/scripts/: goto_server.py
calqui_msgs/: CMakeLists.txt  package.xml
calqui_msgs/action/: GoToPlace.action
catkin_ws/src/calqui/: CMakeLists.txt  package.xml
catkin_ws/src/calqui/cfg/: Calqui.cfg
catkin_ws/src/calqui/scripts/: circle.py  goto_server.py
catkin_ws/src/calqui_msgs/: CMakeLists.txt
catkin_ws/src/calqui_msgs/action/: GoToPlace.action
docker/: Dockerfile
scripts/: setup_ws.sh
